Release 24w07a (snapshot)