@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class qv {
-   public static final ajg<dvd<?, ?>> a = qq.a("crimson_fungus");
-   public static final ajg<dvd<?, ?>> b = qq.a("crimson_fungus_planted");
-   public static final ajg<dvd<?, ?>> c = qq.a("warped_fungus");
-   public static final ajg<dvd<?, ?>> d = qq.a("warped_fungus_planted");
-   public static final ajg<dvd<?, ?>> e = qq.a("huge_brown_mushroom");
-   public static final ajg<dvd<?, ?>> f = qq.a("huge_red_mushroom");
-   public static final ajg<dvd<?, ?>> g = qq.a("oak");
-   public static final ajg<dvd<?, ?>> h = qq.a("dark_oak");
-   public static final ajg<dvd<?, ?>> i = qq.a("birch");
-   public static final ajg<dvd<?, ?>> j = qq.a("acacia");
-   public static final ajg<dvd<?, ?>> k = qq.a("spruce");
-   public static final ajg<dvd<?, ?>> l = qq.a("pine");
-   public static final ajg<dvd<?, ?>> m = qq.a("jungle_tree");
-   public static final ajg<dvd<?, ?>> n = qq.a("fancy_oak");
-   public static final ajg<dvd<?, ?>> o = qq.a("jungle_tree_no_vine");
-   public static final ajg<dvd<?, ?>> p = qq.a("mega_jungle_tree");
-   public static final ajg<dvd<?, ?>> q = qq.a("mega_spruce");
-   public static final ajg<dvd<?, ?>> r = qq.a("mega_pine");
-   public static final ajg<dvd<?, ?>> s = qq.a("super_birch_bees_0002");
-   public static final ajg<dvd<?, ?>> t = qq.a("super_birch_bees");
-   public static final ajg<dvd<?, ?>> u = qq.a("swamp_oak");
-   public static final ajg<dvd<?, ?>> v = qq.a("jungle_bush");
-   public static final ajg<dvd<?, ?>> w = qq.a("azalea_tree");
-   public static final ajg<dvd<?, ?>> x = qq.a("mangrove");
-   public static final ajg<dvd<?, ?>> y = qq.a("tall_mangrove");
-   public static final ajg<dvd<?, ?>> z = qq.a("cherry");
-   public static final ajg<dvd<?, ?>> A = qq.a("oak_bees_0002");
-   public static final ajg<dvd<?, ?>> B = qq.a("oak_bees_002");
-   public static final ajg<dvd<?, ?>> C = qq.a("oak_bees_005");
-   public static final ajg<dvd<?, ?>> D = qq.a("birch_bees_0002");
-   public static final ajg<dvd<?, ?>> E = qq.a("birch_bees_002");
-   public static final ajg<dvd<?, ?>> F = qq.a("birch_bees_005");
-   public static final ajg<dvd<?, ?>> G = qq.a("fancy_oak_bees_0002");
-   public static final ajg<dvd<?, ?>> H = qq.a("fancy_oak_bees_002");
-   public static final ajg<dvd<?, ?>> I = qq.a("fancy_oak_bees_005");
-   public static final ajg<dvd<?, ?>> J = qq.a("fancy_oak_bees");
-   public static final ajg<dvd<?, ?>> K = qq.a("cherry_bees_005");
+   public static final ajg<dvf<?, ?>> a = qq.a("crimson_fungus");
+   public static final ajg<dvf<?, ?>> b = qq.a("crimson_fungus_planted");
+   public static final ajg<dvf<?, ?>> c = qq.a("warped_fungus");
+   public static final ajg<dvf<?, ?>> d = qq.a("warped_fungus_planted");
+   public static final ajg<dvf<?, ?>> e = qq.a("huge_brown_mushroom");
+   public static final ajg<dvf<?, ?>> f = qq.a("huge_red_mushroom");
+   public static final ajg<dvf<?, ?>> g = qq.a("oak");
+   public static final ajg<dvf<?, ?>> h = qq.a("dark_oak");
+   public static final ajg<dvf<?, ?>> i = qq.a("birch");
+   public static final ajg<dvf<?, ?>> j = qq.a("acacia");
+   public static final ajg<dvf<?, ?>> k = qq.a("spruce");
+   public static final ajg<dvf<?, ?>> l = qq.a("pine");
+   public static final ajg<dvf<?, ?>> m = qq.a("jungle_tree");
+   public static final ajg<dvf<?, ?>> n = qq.a("fancy_oak");
+   public static final ajg<dvf<?, ?>> o = qq.a("jungle_tree_no_vine");
+   public static final ajg<dvf<?, ?>> p = qq.a("mega_jungle_tree");
+   public static final ajg<dvf<?, ?>> q = qq.a("mega_spruce");
+   public static final ajg<dvf<?, ?>> r = qq.a("mega_pine");
+   public static final ajg<dvf<?, ?>> s = qq.a("super_birch_bees_0002");
+   public static final ajg<dvf<?, ?>> t = qq.a("super_birch_bees");
+   public static final ajg<dvf<?, ?>> u = qq.a("swamp_oak");
+   public static final ajg<dvf<?, ?>> v = qq.a("jungle_bush");
+   public static final ajg<dvf<?, ?>> w = qq.a("azalea_tree");
+   public static final ajg<dvf<?, ?>> x = qq.a("mangrove");
+   public static final ajg<dvf<?, ?>> y = qq.a("tall_mangrove");
+   public static final ajg<dvf<?, ?>> z = qq.a("cherry");
+   public static final ajg<dvf<?, ?>> A = qq.a("oak_bees_0002");
+   public static final ajg<dvf<?, ?>> B = qq.a("oak_bees_002");
+   public static final ajg<dvf<?, ?>> C = qq.a("oak_bees_005");
+   public static final ajg<dvf<?, ?>> D = qq.a("birch_bees_0002");
+   public static final ajg<dvf<?, ?>> E = qq.a("birch_bees_002");
+   public static final ajg<dvf<?, ?>> F = qq.a("birch_bees_005");
+   public static final ajg<dvf<?, ?>> G = qq.a("fancy_oak_bees_0002");
+   public static final ajg<dvf<?, ?>> H = qq.a("fancy_oak_bees_002");
+   public static final ajg<dvf<?, ?>> I = qq.a("fancy_oak_bees_005");
+   public static final ajg<dvf<?, ?>> J = qq.a("fancy_oak_bees");
+   public static final ajg<dvf<?, ?>> K = qq.a("cherry_bees_005");
 
-   private static dyq.a a(daa $$0, daa $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new dyq.a(dzv.a($$0), new eax($$2, $$3, $$4), dzv.a($$1), new dzb(bme.a($$5), bme.a(0), 3), new dyy(1, 0, 1));
+   private static dys.a a(dac $$0, dac $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new dys.a(dzx.a($$0), new eaz($$2, $$3, $$4), dzx.a($$1), new dzd(bmf.a($$5), bmf.a(0), 3), new dza(1, 0, 1));
    }
 
-   private static dyq.a a() {
-      return a(dac.U, dac.aE, 4, 2, 0, 2).a();
+   private static dys.a a() {
+      return a(dae.U, dae.aE, 4, 2, 0, 2).a();
    }
 
-   private static dyq.a b() {
-      return a(dac.W, dac.aG, 5, 2, 0, 2).a();
+   private static dys.a b() {
+      return a(dae.W, dae.aG, 5, 2, 0, 2).a();
    }
 
-   private static dyq.a c() {
-      return a(dac.W, dac.aG, 5, 2, 6, 2).a();
+   private static dys.a c() {
+      return a(dae.W, dae.aG, 5, 2, 6, 2).a();
    }
 
-   private static dyq.a d() {
-      return a(dac.X, dac.aH, 4, 8, 0, 2);
+   private static dys.a d() {
+      return a(dae.X, dae.aH, 4, 8, 0, 2);
    }
 
-   private static dyq.a e() {
-      return new dyq.a(dzv.a(dac.U), new eat(3, 11, 0), dzv.a(dac.aE), new dzf(bme.a(2), bme.a(4), 4), new dyy(0, 0, 0, OptionalInt.of(4))).a();
+   private static dys.a e() {
+      return new dys.a(dzx.a(dae.U), new eav(3, 11, 0), dzx.a(dae.aE), new dzh(bmf.a(2), bmf.a(4), 4), new dza(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static dyq.a f() {
-      return new dyq.a(
-            dzv.a(dac.Z),
-            new ear(7, 1, 0, new bmo(blm.<bmh>a().a(bme.a(1), 1).a(bme.a(2), 1).a(bme.a(3), 1).a()), bmn.a(2, 4), bmn.a(-4, -3), bmn.a(-1, 0)),
-            dzv.a(dac.aJ),
-            new dzd(bme.a(4), bme.a(0), bme.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new dyy(1, 0, 2)
+   private static dys.a f() {
+      return new dys.a(
+            dzx.a(dae.Z),
+            new eat(7, 1, 0, new bmp(bln.<bmi>a().a(bmf.a(1), 1).a(bmf.a(2), 1).a(bmf.a(3), 1).a()), bmo.a(2, 4), bmo.a(-4, -3), bmo.a(-1, 0)),
+            dzx.a(dae.aJ),
+            new dzf(bmf.a(4), bmf.a(0), bmf.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new dza(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(pl<dvd<?, ?>> $$0) {
-      im<daa> $$1 = $$0.a(kj.f);
-      dtt $$2 = dtt.a(
-         dac.x,
-         dac.y,
-         dac.z,
-         dac.A,
-         dac.B,
-         dac.C,
-         dac.D,
-         dac.E,
-         dac.bR,
-         dac.bS,
-         dac.bT,
-         dac.bU,
-         dac.bV,
-         dac.bW,
-         dac.bX,
-         dac.bY,
-         dac.bZ,
-         dac.ca,
-         dac.cb,
-         dac.cc,
-         dac.cd,
-         dac.ce,
-         dac.cf,
-         dac.cg,
-         dac.cB,
-         dac.dS,
-         dac.fb,
-         dac.fc,
-         dac.fd,
-         dac.fe,
-         dac.fm,
-         dac.fq,
-         dac.fC,
-         dac.gt,
-         dac.gu,
-         dac.ku,
-         dac.kv,
-         dac.kA,
-         dac.kB,
-         dac.kD,
-         dac.oi,
-         dac.oo,
-         dac.ox,
-         dac.oz,
-         dac.oA,
-         dac.oB,
-         dac.oC,
-         dac.sv,
-         dac.sw,
-         dac.sx,
-         dac.sy,
-         dac.sz,
-         dac.sA,
-         dac.sB,
-         dac.sD,
-         dac.sE,
-         dac.sF
+   public static void a(pl<dvf<?, ?>> $$0) {
+      im<dac> $$1 = $$0.a(kj.f);
+      dtv $$2 = dtv.a(
+         dae.x,
+         dae.y,
+         dae.z,
+         dae.A,
+         dae.B,
+         dae.C,
+         dae.D,
+         dae.E,
+         dae.bR,
+         dae.bS,
+         dae.bT,
+         dae.bU,
+         dae.bV,
+         dae.bW,
+         dae.bX,
+         dae.bY,
+         dae.bZ,
+         dae.ca,
+         dae.cb,
+         dae.cc,
+         dae.cd,
+         dae.ce,
+         dae.cf,
+         dae.cg,
+         dae.cB,
+         dae.dS,
+         dae.fb,
+         dae.fc,
+         dae.fd,
+         dae.fe,
+         dae.fm,
+         dae.fq,
+         dae.fC,
+         dae.gt,
+         dae.gu,
+         dae.ku,
+         dae.kv,
+         dae.kA,
+         dae.kB,
+         dae.kD,
+         dae.oi,
+         dae.oo,
+         dae.ox,
+         dae.oz,
+         dae.oA,
+         dae.oB,
+         dae.oC,
+         dae.sv,
+         dae.sw,
+         dae.sx,
+         dae.sy,
+         dae.sz,
+         dae.sA,
+         dae.sB,
+         dae.sD,
+         dae.sE,
+         dae.sF
       );
-      qq.a($$0, a, dvq.U, new dvz(dac.ow.o(), dac.os.o(), dac.kK.o(), dac.oy.o(), $$2, false));
-      qq.a($$0, b, dvq.U, new dvz(dac.ow.o(), dac.os.o(), dac.kK.o(), dac.oy.o(), $$2, true));
-      qq.a($$0, c, dvq.U, new dvz(dac.on.o(), dac.oj.o(), dac.op.o(), dac.oy.o(), $$2, false));
-      qq.a($$0, d, dvq.U, new dvz(dac.on.o(), dac.oj.o(), dac.op.o(), dac.oy.o(), $$2, true));
+      qq.a($$0, a, dvs.U, new dwb(dae.ow.o(), dae.os.o(), dae.kK.o(), dae.oy.o(), $$2, false));
+      qq.a($$0, b, dvs.U, new dwb(dae.ow.o(), dae.os.o(), dae.kK.o(), dae.oy.o(), $$2, true));
+      qq.a($$0, c, dvs.U, new dwb(dae.on.o(), dae.oj.o(), dae.op.o(), dae.oy.o(), $$2, false));
+      qq.a($$0, d, dvs.U, new dwb(dae.on.o(), dae.oj.o(), dae.op.o(), dae.oy.o(), $$2, true));
       qq.a(
          $$0,
          e,
-         dvq.r,
-         new dxw(
-            dzv.a(dac.eT.o().a(ddw.f, Boolean.valueOf(true)).a(ddw.g, Boolean.valueOf(false))),
-            dzv.a(dac.eV.o().a(ddw.f, Boolean.valueOf(false)).a(ddw.g, Boolean.valueOf(false))),
+         dvs.r,
+         new dxy(
+            dzx.a(dae.eT.o().a(ddy.f, Boolean.valueOf(true)).a(ddy.g, Boolean.valueOf(false))),
+            dzx.a(dae.eV.o().a(ddy.f, Boolean.valueOf(false)).a(ddy.g, Boolean.valueOf(false))),
             3
          )
       );
       qq.a(
          $$0,
          f,
-         dvq.q,
-         new dxw(dzv.a(dac.eU.o().a(ddw.g, Boolean.valueOf(false))), dzv.a(dac.eV.o().a(ddw.f, Boolean.valueOf(false)).a(ddw.g, Boolean.valueOf(false))), 2)
+         dvs.q,
+         new dxy(dzx.a(dae.eU.o().a(ddy.g, Boolean.valueOf(false))), dzx.a(dae.eV.o().a(ddy.f, Boolean.valueOf(false)).a(ddy.g, Boolean.valueOf(false))), 2)
       );
-      eaj $$3 = new eaj(0.002F);
-      eaj $$4 = new eaj(0.01F);
-      eaj $$5 = new eaj(0.02F);
-      eaj $$6 = new eaj(0.05F);
-      eaj $$7 = new eaj(1.0F);
-      qq.a($$0, g, dvq.f, a().c());
+      eal $$3 = new eal(0.002F);
+      eal $$4 = new eal(0.01F);
+      eal $$5 = new eal(0.02F);
+      eal $$6 = new eal(0.05F);
+      eal $$7 = new eal(1.0F);
+      qq.a($$0, g, dvs.f, a().c());
       qq.a(
          $$0,
          h,
-         dvq.f,
-         new dyq.a(dzv.a(dac.aa), new eas(6, 2, 1), dzv.a(dac.aK), new dze(bme.a(0), bme.a(0)), new dyx(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         dvs.f,
+         new dys.a(dzx.a(dae.aa), new eau(6, 2, 1), dzx.a(dae.aK), new dzg(bmf.a(0), bmf.a(0)), new dyz(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      qq.a($$0, i, dvq.f, b().c());
-      qq.a($$0, j, dvq.f, new dyq.a(dzv.a(dac.Y), new eau(5, 2, 2), dzv.a(dac.aI), new dza(bme.a(2), bme.a(0)), new dyy(1, 0, 2)).a().c());
-      qq.a($$0, z, dvq.f, f().c());
-      qq.a($$0, K, dvq.f, f().a(List.of($$6)).c());
-      qq.a($$0, k, dvq.f, new dyq.a(dzv.a(dac.V), new eax(5, 2, 1), dzv.a(dac.aF), new dzm(bmn.a(2, 3), bmn.a(0, 2), bmn.a(1, 2)), new dyy(2, 0, 2)).a().c());
-      qq.a($$0, l, dvq.f, new dyq.a(dzv.a(dac.V), new eax(6, 4, 0), dzv.a(dac.aF), new dzk(bme.a(1), bme.a(1), bmn.a(3, 4)), new dyy(2, 0, 2)).a().c());
-      qq.a($$0, m, dvq.f, d().a(ImmutableList.of(new eak(0.2F), eao.b, new eal(0.25F))).a().c());
-      qq.a($$0, n, dvq.f, e().c());
-      qq.a($$0, o, dvq.f, d().a().c());
+      qq.a($$0, i, dvs.f, b().c());
+      qq.a($$0, j, dvs.f, new dys.a(dzx.a(dae.Y), new eaw(5, 2, 2), dzx.a(dae.aI), new dzc(bmf.a(2), bmf.a(0)), new dza(1, 0, 2)).a().c());
+      qq.a($$0, z, dvs.f, f().c());
+      qq.a($$0, K, dvs.f, f().a(List.of($$6)).c());
+      qq.a($$0, k, dvs.f, new dys.a(dzx.a(dae.V), new eaz(5, 2, 1), dzx.a(dae.aF), new dzo(bmo.a(2, 3), bmo.a(0, 2), bmo.a(1, 2)), new dza(2, 0, 2)).a().c());
+      qq.a($$0, l, dvs.f, new dys.a(dzx.a(dae.V), new eaz(6, 4, 0), dzx.a(dae.aF), new dzm(bmf.a(1), bmf.a(1), bmo.a(3, 4)), new dza(2, 0, 2)).a().c());
+      qq.a($$0, m, dvs.f, d().a(ImmutableList.of(new eam(0.2F), eaq.b, new ean(0.25F))).a().c());
+      qq.a($$0, n, dvs.f, e().c());
+      qq.a($$0, o, dvs.f, d().a().c());
       qq.a(
          $$0,
          p,
-         dvq.f,
-         new dyq.a(dzv.a(dac.X), new eaw(10, 2, 19), dzv.a(dac.aH), new dzi(bme.a(2), bme.a(0), 2), new dyy(1, 1, 2))
-            .a(ImmutableList.of(eao.b, new eal(0.25F)))
+         dvs.f,
+         new dys.a(dzx.a(dae.X), new eay(10, 2, 19), dzx.a(dae.aH), new dzk(bmf.a(2), bmf.a(0), 2), new dza(1, 1, 2))
+            .a(ImmutableList.of(eaq.b, new ean(0.25F)))
             .c()
       );
       qq.a(
          $$0,
          q,
-         dvq.f,
-         new dyq.a(dzv.a(dac.V), new eav(13, 2, 14), dzv.a(dac.aF), new dzj(bme.a(0), bme.a(0), bmn.a(13, 17)), new dyy(1, 1, 2))
-            .a(ImmutableList.of(new eah(dzv.a(dac.l))))
+         dvs.f,
+         new dys.a(dzx.a(dae.V), new eax(13, 2, 14), dzx.a(dae.aF), new dzl(bmf.a(0), bmf.a(0), bmo.a(13, 17)), new dza(1, 1, 2))
+            .a(ImmutableList.of(new eaj(dzx.a(dae.l))))
             .c()
       );
       qq.a(
          $$0,
          r,
-         dvq.f,
-         new dyq.a(dzv.a(dac.V), new eav(13, 2, 14), dzv.a(dac.aF), new dzj(bme.a(0), bme.a(0), bmn.a(3, 7)), new dyy(1, 1, 2))
-            .a(ImmutableList.of(new eah(dzv.a(dac.l))))
+         dvs.f,
+         new dys.a(dzx.a(dae.V), new eax(13, 2, 14), dzx.a(dae.aF), new dzl(bmf.a(0), bmf.a(0), bmo.a(3, 7)), new dza(1, 1, 2))
+            .a(ImmutableList.of(new eaj(dzx.a(dae.l))))
             .c()
       );
-      qq.a($$0, s, dvq.f, c().a(ImmutableList.of($$3)).c());
-      qq.a($$0, t, dvq.f, c().a(ImmutableList.of($$7)).c());
-      qq.a($$0, u, dvq.f, a(dac.U, dac.aE, 5, 3, 0, 3).a(ImmutableList.of(new eal(0.25F))).c());
-      qq.a($$0, v, dvq.f, new dyq.a(dzv.a(dac.X), new eax(1, 0, 0), dzv.a(dac.aE), new dzc(bme.a(2), bme.a(1), 2), new dyy(0, 0, 0)).c());
+      qq.a($$0, s, dvs.f, c().a(ImmutableList.of($$3)).c());
+      qq.a($$0, t, dvs.f, c().a(ImmutableList.of($$7)).c());
+      qq.a($$0, u, dvs.f, a(dae.U, dae.aE, 5, 3, 0, 3).a(ImmutableList.of(new ean(0.25F))).c());
+      qq.a($$0, v, dvs.f, new dys.a(dzx.a(dae.X), new eaz(1, 0, 0), dzx.a(dae.aE), new dze(bmf.a(2), bmf.a(1), 2), new dza(0, 0, 0)).c());
       qq.a(
          $$0,
          w,
-         dvq.f,
-         new dyq.a(
-               dzv.a(dac.U),
-               new eaq(4, 2, 0, 3, bmn.a(1, 2)),
-               new eaf(blm.<dmz>a().a(dac.aM.o(), 3).a(dac.aN.o(), 1)),
-               new dzl(bme.a(3), bme.a(0), bme.a(2), 50),
-               new dyy(1, 0, 1)
+         dvs.f,
+         new dys.a(
+               dzx.a(dae.U),
+               new eas(4, 2, 0, 3, bmo.a(1, 2)),
+               new eah(bln.<dnb>a().a(dae.aM.o(), 3).a(dae.aN.o(), 1)),
+               new dzn(bmf.a(3), bmf.a(0), bmf.a(2), 50),
+               new dza(1, 0, 1)
             )
-            .a(dzv.a(dac.sH))
+            .a(dzx.a(dae.sH))
             .b()
             .c()
       );
       qq.a(
          $$0,
          x,
-         dvq.f,
-         new dyq.a(
-               dzv.a(dac.ab),
-               new eba(2, 1, 4, bmn.a(1, 4), 0.5F, bmn.a(0, 1), $$1.b(aun.cd)),
-               dzv.a(dac.aL),
-               new dzl(bme.a(3), bme.a(0), bme.a(2), 70),
+         dvs.f,
+         new dys.a(
+               dzx.a(dae.ab),
+               new ebc(2, 1, 4, bmo.a(1, 4), 0.5F, bmo.a(0, 1), $$1.b(aun.cd)),
+               dzx.a(dae.aL),
+               new dzn(bmf.a(3), bmf.a(0), bmf.a(2), 70),
                Optional.of(
-                  new dzr(
-                     bmn.a(1, 3),
-                     dzv.a(dac.ac),
-                     Optional.of(new dzp(dzv.a(dac.sA), 0.5F)),
-                     new dzq($$1.b(aun.ce), ip.a(daa::r, dac.sI, dac.ad), dzv.a(dac.ad), 8, 15, 0.2F)
+                  new dzt(
+                     bmo.a(1, 3),
+                     dzx.a(dae.ac),
+                     Optional.of(new dzr(dzx.a(dae.sA), 0.5F)),
+                     new dzs($$1.b(aun.ce), ip.a(dac::r, dae.sI, dae.ad), dzx.a(dae.ad), 8, 15, 0.2F)
                   )
                ),
-               new dyy(2, 0, 2)
+               new dza(2, 0, 2)
             )
             .a(
                List.of(
-                  new eal(0.125F), new eai(0.14F, 1, 0, new eab(dzv.a(dac.E.o().a(deu.d, Boolean.valueOf(true))), deu.b, bmn.a(0, 4)), 2, List.of(ih.a)), $$4
+                  new ean(0.125F), new eak(0.14F, 1, 0, new ead(dzx.a(dae.E.o().a(dew.d, Boolean.valueOf(true))), dew.b, bmo.a(0, 4)), 2, List.of(ih.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class qv {
       qq.a(
          $$0,
          y,
-         dvq.f,
-         new dyq.a(
-               dzv.a(dac.ab),
-               new eba(4, 1, 9, bmn.a(1, 6), 0.5F, bmn.a(0, 1), $$1.b(aun.cd)),
-               dzv.a(dac.aL),
-               new dzl(bme.a(3), bme.a(0), bme.a(2), 70),
+         dvs.f,
+         new dys.a(
+               dzx.a(dae.ab),
+               new ebc(4, 1, 9, bmo.a(1, 6), 0.5F, bmo.a(0, 1), $$1.b(aun.cd)),
+               dzx.a(dae.aL),
+               new dzn(bmf.a(3), bmf.a(0), bmf.a(2), 70),
                Optional.of(
-                  new dzr(
-                     bmn.a(3, 7),
-                     dzv.a(dac.ac),
-                     Optional.of(new dzp(dzv.a(dac.sA), 0.5F)),
-                     new dzq($$1.b(aun.ce), ip.a(daa::r, dac.sI, dac.ad), dzv.a(dac.ad), 8, 15, 0.2F)
+                  new dzt(
+                     bmo.a(3, 7),
+                     dzx.a(dae.ac),
+                     Optional.of(new dzr(dzx.a(dae.sA), 0.5F)),
+                     new dzs($$1.b(aun.ce), ip.a(dac::r, dae.sI, dae.ad), dzx.a(dae.ad), 8, 15, 0.2F)
                   )
                ),
-               new dyy(3, 0, 2)
+               new dza(3, 0, 2)
             )
             .a(
                List.of(
-                  new eal(0.125F), new eai(0.14F, 1, 0, new eab(dzv.a(dac.E.o().a(deu.d, Boolean.valueOf(true))), deu.b, bmn.a(0, 4)), 2, List.of(ih.a)), $$4
+                  new ean(0.125F), new eak(0.14F, 1, 0, new ead(dzx.a(dae.E.o().a(dew.d, Boolean.valueOf(true))), dew.b, bmo.a(0, 4)), 2, List.of(ih.a)), $$4
                )
             )
             .a()
             .c()
       );
-      qq.a($$0, A, dvq.f, a().a(List.of($$3)).c());
-      qq.a($$0, B, dvq.f, a().a(List.of($$5)).c());
-      qq.a($$0, C, dvq.f, a().a(List.of($$6)).c());
-      qq.a($$0, D, dvq.f, b().a(List.of($$3)).c());
-      qq.a($$0, E, dvq.f, b().a(List.of($$5)).c());
-      qq.a($$0, F, dvq.f, b().a(List.of($$6)).c());
-      qq.a($$0, G, dvq.f, e().a(List.of($$3)).c());
-      qq.a($$0, H, dvq.f, e().a(List.of($$5)).c());
-      qq.a($$0, I, dvq.f, e().a(List.of($$6)).c());
-      qq.a($$0, J, dvq.f, e().a(List.of($$7)).c());
+      qq.a($$0, A, dvs.f, a().a(List.of($$3)).c());
+      qq.a($$0, B, dvs.f, a().a(List.of($$5)).c());
+      qq.a($$0, C, dvs.f, a().a(List.of($$6)).c());
+      qq.a($$0, D, dvs.f, b().a(List.of($$3)).c());
+      qq.a($$0, E, dvs.f, b().a(List.of($$5)).c());
+      qq.a($$0, F, dvs.f, b().a(List.of($$6)).c());
+      qq.a($$0, G, dvs.f, e().a(List.of($$3)).c());
+      qq.a($$0, H, dvs.f, e().a(List.of($$5)).c());
+      qq.a($$0, I, dvs.f, e().a(List.of($$6)).c());
+      qq.a($$0, J, dvs.f, e().a(List.of($$7)).c());
    }
 }
